@@ -4,6 +4,7 @@ NEXT/3.04
         - Fixed output leakage with really_quiet set.
         - Progress reports for tests without plans now show
           "143/?" instead of "143/0".
+        - Made TAP::Harness::runtests support aliases for test names.
 
 3.03    2007-11-17
         - Fixed some little bugs-waiting-to-happen inside
